base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: deploy-dev
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
