base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: false
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  rules:
  - host: .local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
